--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,22 @@ td:nth-child(n+2){
    font-size: 30px;
 }
 
-#number:nth-child(-n+1) {
+#number:first-child {
     border-color: rgb(126, 5, 5);
 }
 
 .title {
     color: rgb(0, 0, 0);
     text-shadow: 2px 3px 5px rgb(105, 1, 105);
+}
+a:visited {
+    color: blueviolet;
+}
+a:link {
+    color: red;
+}
+h2 {
+    text-shadow: 2px 3px 5px red;
 }
 
 
